--- a/requirements.txt
+++ b/requirements.txt
@@ -1,108 +1,6 @@
-'''This is not the real requirements txt, remember to create a virtual enviroment, then use pip frezze> requirements.txt'''
-altair==5.2.0
-astroid==3.0.2
-asttokens==2.4.0
-attrs==23.1.0
-autopep8==2.0.4
-backcall==0.2.0
-blinker==1.7.0
-build==1.0.3
-cachetools==5.3.2
-certifi==2023.11.17
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-comm==0.1.4
-contourpy==1.1.1
-cycler==0.12.1
-debugpy==1.8.0
-decorator==5.1.1
-dill==0.3.7
-distlib==0.3.7
-executing==2.0.0
-fastjsonschema==2.19.0
-filelock==3.12.4
-fonttools==4.43.1
-gitdb==4.0.11
-GitPython==3.1.40
-idna==3.6
-importlib-metadata==6.11.0
-iniconfig==2.0.0
-ipykernel==6.25.2
-ipython==8.16.1
-isort==5.13.2
-jedi==0.19.1
-Jinja2==3.1.2
-jsonschema==4.20.0
-jsonschema-specifications==2023.11.1
-jupyter_client==8.4.0
-jupyter_core==5.4.0
-kiwisolver==1.4.5
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-matplotlib==3.8.0
-matplotlib-inline==0.1.6
-mccabe==0.7.0
-mdurl==0.1.2
-mypy==1.7.1
-mypy-extensions==1.0.0
-nbclient==0.9.0
-nbformat==5.9.2
-nest-asyncio==1.5.8
-numpy==1.26.1
-packaging==23.2
-pandas==2.1.1
-parso==0.8.3
-patsy==0.5.4
-pickleshare==0.7.5
-Pillow==10.1.0
-platformdirs==3.11.0
-plotly==5.18.0
-plotly-express==0.4.1
-pluggy==1.3.0
-prompt-toolkit==3.0.39
-protobuf==4.25.1
-psutil==5.9.6
-pure-eval==0.2.2
-pyarrow==14.0.1
-pycodestyle==2.11.1
-pydeck==0.8.1b0
-Pygments==2.16.1
-pylint==3.0.3
-pyparsing==3.1.1
-pyproject_hooks==1.0.0
-pytest==7.4.3
-python-dateutil==2.8.2
-pytz==2023.3.post1
-pywin32==306
-PyYAML==6.0.1
-pyzmq==25.1.1
-referencing==0.31.0
-requests==2.31.0
-rich==13.7.0
-rpds-py==0.13.1
-scipy==1.11.4
-seaborn==0.13.0
-setuptools==69.0.3
-six==1.16.0
-smmap==5.0.1
-stack-data==0.6.3
-statsmodels==0.14.1
-streamlit==1.29.0
-tenacity==8.2.3
-toml==0.10.2
-tomlkit==0.12.3
-toolz==0.12.0
-tornado==6.3.3
-traitlets==5.11.2
-typing_extensions==4.9.0
-tzdata==2023.3
-tzlocal==5.2
-urllib3==2.1.0
-validators==0.22.0
-virtualenv==20.24.5
-watchdog==3.0.0
-wcwidth==0.2.8
-wheel==0.42.0
-yappi==1.6.0
-zipp==3.17.0
+pandas
+numpy
+matplotlib
+plotly_express
+seaborn
+scipy
